--- a/index.html/Chelsea Hefferin CSD 340 Landing Page.html
+++ b/index.html/Chelsea Hefferin CSD 340 Landing Page.html
@@ -29,7 +29,7 @@
         <ul>
             <li><a href="../module-1/hefferin_Mod1_3.html">Assignment 1.3</a></li>
             <li><a href="../module-2/hefferin_Mod2_2.html">Assignment 2.2</a></li>
-            <li><a href="module-3/Assignment_3_3.html">Assignment 3.3</a></li>
+            <li><a href="../module-3/hefferin_Mod3_3.html">Assignment 3.3</a></li>
         </ul>
 
         <!-- Heading 3: Projects -->
