--- a/index.html/Chelsea Hefferin CSD 340 Landing Page.html
+++ b/index.html/Chelsea Hefferin CSD 340 Landing Page.html
@@ -34,6 +34,8 @@
             <li><a href="../module-6/hefferin_Mod6_2.html">Assignment 6.2</a></li>
             <li><a href="../module-8/hefferin_Mod8_2.html">Assignment 8.2</a></li>
             <li><a href="../module-9/hefferin_Mod9_3.html">Assignment 9.3</a></li>
+            <li><a href="../module-10/hefferin_Mod10_3.html">Assignment 10.3</a></li>
+            <li><a href="../module-11/hefferin_Mod11_2.html">Assignment 11.2</a></li>
         </ul>
 
         <!-- Heading 3: Projects -->
