--- a/index.html/Chelsea Hefferin CSD 340 Landing Page.html
+++ b/index.html/Chelsea Hefferin CSD 340 Landing Page.html
@@ -36,6 +36,10 @@
             <li><a href="../module-9/hefferin_Mod9_3.html">Assignment 9.3</a></li>
             <li><a href="../module-10/hefferin_Mod10_3.html">Assignment 10.3</a></li>
             <li><a href="../module-11/hefferin_Mod11_2.html">Assignment 11.2</a></li>
+            <li><a href="../module-12/hefferin_Mod12_2.html">Assignment 12.2</a></li>
+
+            
+    
         </ul>
 
         <!-- Heading 3: Projects -->
